# vs2019_span_bug

./: .gitignore  CMakeLists.txt  README.md  VS2019SpanBug.sln  VS2019SpanBug.vcxproj  main.cpp
